@@ -15,6 +15,8 @@
 <LI>display extra windows with the complete sequent text or the
 complete proof command on mouse button 2
 </LI>
+<LI>the clone button yields a frozen copy of the proof tree 
+</LI>
 <LI>keep proof tree windows when retracting in a big step to a
 point before the proof
 <P></P></LI>
