@@ -1,3 +1,7 @@
+2011-05-30  Hendrik Tews  <tews@os.inf.tu-dresden.de>
+
+	* clone button
+
 2011-05-28  Hendrik Tews  <tews@os.inf.tu-dresden.de>
 
 	* update existentials in external windows
